finished all layout and design stuff, didnt do it with angular like a genius

--- a/index.html
+++ b/index.html
@@ -2,17 +2,114 @@
 <html>
 <head>
 	<meta lang="en">
-	<title>Index</title>
+	<title>Tatiana Kerick</title>
+
+	<!-- favicon -->
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+	<!-- web fonts -->
+	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
+
+	<!-- css -->
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	
 </head>
 
 <body>
+<div="wrap">
 
+	<div id="navigation">
+		
+		<img id="logo" src="img/logo.png" />
+
+		<br />
+
+		<ul id="nav">
+			<li><a href="#">Stuff</a></li>
+			<li><a href="#">Projects</a></li>
+			<li><a href="#">About</a></li>
+		</ul>
+	</div><!-- navigation -->
+
+	<div id="content">
+
+		<section id="home" class="section">
+
+			<div class="banner">
+			    <ul>
+			        <li><img src="img/unslider/img1.png" /><li>
+			        <li><img src="img/unslider/img2.png" /></li>
+			        <li><img src="img/unslider/img3.png" /></li>
+			        <li><img src="img/unslider/img4.png" /></li>
+			    </ul>
+			</div><!-- .banner -->
+
+		</section><!-- home -->
+
+		<section id="projects" class="section">
+			<h2>Projects</h2>
+
+			<!-- these are probably anuglar things later on -->
+
+			<div id="gallery">
+
+				<div class="imgHolder">
+					<a href="#" class="imgLink"><img class="display" src="img/gallery/bonfires.jpg"></a>
+
+					<h4><span>Bonfires in Ovideo</span></h4>
+					<!-- need a jquery mouse over event to get ride of box shadow -->
+				</div>
+
+				<div class="imgHolder">
+					<a href="#" class="imgLink"><img class="display" src="img/gallery/costais.jpg"></a>
+
+					<h4><span>Expense Manager</span></h4>
+				</div>
+
+				<br />
+
+				<div class="imgHolder">
+					<a href="#" class="imgLink"><img class="display" src="img/gallery/flipbook.jpg"></a>
+
+					<h4><span>Flash Animator</span></h4>
+				</div>
+
+				<div class="imgHolder">
+					<a href="#" class="imgLink"><img class="display" src="img/gallery/octopus.jpg"></a>
+
+					<h4><span>Little Octopus</span></h4>
+				</div>
+
+			</div><!-- gallery -->
+
+			
+
+		</section><!-- projects -->
+
+
+		<section id="about" class="section">
+			<h2>About</h2>
+		</section><!-- about -->
+
+	</div><!-- content -->
+
+	<div id="footer">
+
+	</div><!-- footer -->
  
-<!-- Main -->
-<script type="text/javascript" src="js/main.js"></script>
+ </div><!-- wrap -->
+
 <!-- Angular -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>	
+<!-- jQuery -->
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> 
+<!-- Unslider -->
+<script type="text/javascript" src="js/unslider.js"></script>
+<!-- Main -->
+<script type="text/javascript" src="js/main.js"></script>
+
 </body>
 
 </html>
