added two new projects

--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
 					<h4><span>Little Octopus</span></h4>
 				</div>
 
+				<br />
+
+				<div class="imgHolder">
+					<a href="#" class="imgLink"><img class="display" src="img/gallery/scheme.jpg"></a>
+
+					<h4><span>Task Manager</span></h4>
+				</div>
+
+				<div class="imgHolder">
+					<a href="#" class="imgLink"><img class="display" src="img/gallery/markularity.jpg"></a>
+
+					<h4><span>Bookmark Ranking</span></h4>
+				</div>
+
 			</div><!-- gallery -->
 
 			
