site images fixed, navigation gone, sections gone, gallery changed

--- a/index.html
+++ b/index.html
@@ -26,88 +26,73 @@
 
 		<br />
 
-		<ul id="nav">
-			<li><a href="#">Stuff</a></li>
-			<li><a href="#">Projects</a></li>
-			<li><a href="#">About</a></li>
-		</ul>
+		<h2>Portfolio Gallery</h2>
+
 	</div><!-- navigation -->
 
-	<div id="content">
+	<div  id="sites" class="gallery">
 
-		<section id="home" class="section">
+		<h3>Websites</h3>
 
-			<div class="banner">
-			    <ul>
-			        <li><img src="img/unslider/img1.png" /><li>
-			        <li><img src="img/unslider/img2.png" /></li>
-			        <li><img src="img/unslider/img3.png" /></li>
-			        <li><img src="img/unslider/img4.png" /></li>
-			    </ul>
-			</div><!-- .banner -->
+		<div class="gallItem">
+			<h4>Art of Dying</h4>
 
-		</section><!-- home -->
+			<img class="gallImg" src="img/gallery/sites/artof.png">
+			<br />
+			<span>Blog like collection of stories</span>
+		</div><!-- gallItem -->
 
-		<section id="projects" class="section">
-			<h2>Projects</h2>
+		<div class="gallItem">
+			<h4>Bonfires</h4>
 
-			<!-- these are probably anuglar things later on -->
-
-			<div id="gallery">
-
-				<div class="imgHolder">
-					<a href="#" class="imgLink"><img class="display" src="img/gallery/bonfires.jpg"></a>
-
-					<h4><span>Bonfires in Ovideo</span></h4>
-					<!-- need a jquery mouse over event to get ride of box shadow -->
-				</div>
-
-				<div class="imgHolder">
-					<a href="#" class="imgLink"><img class="display" src="img/gallery/costais.jpg"></a>
-
-					<h4><span>Expense Manager</span></h4>
-				</div>
-
-				<br />
-
-				<div class="imgHolder">
-					<a href="#" class="imgLink"><img class="display" src="img/gallery/flipbook.jpg"></a>
-
-					<h4><span>Flash Animator</span></h4>
-				</div>
-
-				<div class="imgHolder">
-					<a href="#" class="imgLink"><img class="display" src="img/gallery/octopus.jpg"></a>
-
-					<h4><span>Little Octopus</span></h4>
-				</div>
-
-				<br />
-
-				<div class="imgHolder">
-					<a href="#" class="imgLink"><img class="display" src="img/gallery/scheme.jpg"></a>
-
-					<h4><span>Task Manager</span></h4>
-				</div>
-
-				<div class="imgHolder">
-					<a href="#" class="imgLink"><img class="display" src="img/gallery/markularity.jpg"></a>
-
-					<h4><span>Bookmark Ranking</span></h4>
-				</div>
-
-			</div><!-- gallery -->
-
-
-		</section><!-- projects -->
+			<img class="gallImg" src="img/gallery/sites/bonfires.png">
+			<br />
+			<span>Client work for Bonfires in Ovideo</span>
+		</div><!-- gallItem -->
 
 		<br />
 
-		<section id="about" class="section">
-			<h2>About</h2>
-		</section><!-- about -->
+		<div class="gallItem">
+			<h4>Costais</h4>
 
-	</div><!-- content -->
+			<img class="gallImg" src="img/gallery/sites/costais.png">
+			<br />
+			<span>Expense manager made with CodeIgniter</span>
+		</div><!-- gallItem -->
+
+		<div class="gallItem">
+			<h4>Flipbook</h4>
+
+			<img class="gallImg" src="img/gallery/sites/flipbook.png">
+			<br />
+			<span>Elementary bases flash application for flipbook like animations</span>
+		</div><!-- gallItem -->
+
+		<br />
+
+		<div class="gallItem">
+			<h4>Happy Little Octopus</h4>
+
+			<img class="gallImg" src="img/gallery/sites/octopus.png">
+			<br />
+			<span>Personal graphic project intergrated into the web for Javascript practive</span>
+		</div><!-- gallItem -->
+
+		<div class="gallItem">
+			<h4>Task Manager</h4>
+
+			<img class="gallImg" src="img/gallery/sites/scheme.png">
+			<br />
+			<span>Steampunk task manager made with jQuery</span>
+		</div><!-- gallItem -->
+
+	</div><!-- sites -->
+
+
+	<div  id="graphics" class="gallery">
+
+
+	</div><!-- graphics -->
 
 	<div id="footer">
 
