nav added back, footer nav, styling done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
 		<br />
 
-		<h2>Portfolio Gallery</h2>
+		<ul class="nav">
+			<li><a href="#">Websites</a></li>
+			<li><a href="#">Graphics</a></li>
+			<li><a href="#">About</a></li>
+		</ul>
 
 	</div><!-- navigation -->
 
@@ -75,7 +79,7 @@
 
 			<img class="gallImg" src="img/gallery/sites/octopus.png">
 			<br />
-			<span>Personal graphic project intergrated into the web for Javascript practive</span>
+			<span>Personal graphic project intergrated into the web for Javascript practice</span>
 		</div><!-- gallItem -->
 
 		<div class="gallItem">
@@ -88,14 +92,14 @@
 
 	</div><!-- sites -->
 
-
-	<div  id="graphics" class="gallery">
-
-
-	</div><!-- graphics -->
-
 	<div id="footer">
-
+		<ul class="nav">
+			<li><a href="#">Websites</a></li>
+			<li> | </li>
+			<li><a href="#">Graphics</a></li>
+			<li> | </li>
+			<li><a href="#">About</a></li>
+		</ul>
 	</div><!-- footer -->
  
  </div><!-- wrap -->
