added image gallery and info page

--- a/graphics.html
+++ b/graphics.html
@@ -27,67 +27,49 @@
 		<br />
 
 		<ul class="nav">
-			<li><a href="index.html" class="active">Websites</a></li>
-			<li><a href="graphics.html">Graphics</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="index.html">Websites</a></li>
+			<li><a href="graphics.html" class="active">Graphics</a></li>
+			<li><a href="about.html">About</a></li>
 		</ul>
 
 	</div><!-- navigation -->
 
 	<div  id="sites" class="gallery">
 
-		<h3>Websites</h3>
+		<h3>Graphics</h3>
 
 		<div class="gallItem">
-			<h4>Art of Dying</h4>
+			<h4>Ghetto cupcake</h4>
 
-			<img class="gallImg" src="img/gallery/sites/artof.png">
+			<img class="gallImg" src="img/gallery/images/cupcake.jpg">
 			<br />
-			<span>Blog like collection of stories</span>
+			<span>Was not selected for Flex Cupcakes</span>
 		</div><!-- gallItem -->
 
 		<div class="gallItem">
-			<h4>Bonfires</h4>
+			<h4>Ribs</h4>
 
-			<img class="gallImg" src="img/gallery/sites/bonfires.png">
+			<img class="gallImg" src="img/gallery/images/key_ribs.jpg">
 			<br />
-			<span>Client work for Bonfires in Ovideo</span>
-		</div><!-- gallItem -->
-
-		<br />
-
-		<div class="gallItem">
-			<h4>Costais</h4>
-
-			<img class="gallImg" src="img/gallery/sites/costais.png">
-			<br />
-			<span>Expense manager made with CodeIgniter</span>
-		</div><!-- gallItem -->
-
-		<div class="gallItem">
-			<h4>Flipbook</h4>
-
-			<img class="gallImg" src="img/gallery/sites/flipbook.png">
-			<br />
-			<span>Elementary bases flash application for flipbook like animations</span>
+			<span>Ribs with keys</span>
 		</div><!-- gallItem -->
 
 		<br />
 
 		<div class="gallItem">
-			<h4>Happy Little Octopus</h4>
+			<h4>Music Ribs</h4>
 
-			<img class="gallImg" src="img/gallery/sites/octopus.png">
+			<img class="gallImg" src="img/gallery/images/music_ribs.jpg">
 			<br />
-			<span>Personal graphic project intergrated into the web for Javascript practice</span>
+			<span>Feel the music through your bones</span>
 		</div><!-- gallItem -->
 
 		<div class="gallItem">
-			<h4>Task Manager</h4>
+			<h4>Octopus</h4>
 
-			<img class="gallImg" src="img/gallery/sites/scheme.png">
+			<img class="gallImg" src="img/gallery/images/octopus.jpg">
 			<br />
-			<span>Steampunk task manager made with jQuery</span>
+			<span>My pet octopus</span>
 		</div><!-- gallItem -->
 
 	</div><!-- sites -->
