--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="demoApp">
 <head>
 	<meta lang="en">
 	<title>Tatiana Kerick</title>
@@ -12,18 +12,25 @@
 	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
 
 	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/main.css">
+
+	<!-- Angular -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
+
 </head>
 
 <body>
+
+
 <div="wrap">
 
 	<div id="navigation">
-		
+
 		<img id="logo" src="img/logo.png" />
 
+-- {{title}} --
 		<br />
 
 		<ul class="nav">
@@ -35,61 +42,7 @@
 	</div><!-- navigation -->
 
 	<div  id="sites" class="gallery">
-
-		<h3>Websites</h3>
-
-		<div class="gallItem">
-			<h4>Art of Dying</h4>
-
-			<img class="gallImg" src="img/gallery/sites/artof.png">
-			<br />
-			<span>Blog like collection of stories</span>
-		</div><!-- gallItem -->
-
-		<div class="gallItem">
-			<h4>Bonfires</h4>
-
-			<img class="gallImg" src="img/gallery/sites/bonfires.png">
-			<br />
-			<span>Client work for Bonfires in Ovideo</span>
-		</div><!-- gallItem -->
-
-		<br />
-
-		<div class="gallItem">
-			<h4>Costais</h4>
-
-			<img class="gallImg" src="img/gallery/sites/costais.png">
-			<br />
-			<span>Expense manager made with CodeIgniter</span>
-		</div><!-- gallItem -->
-
-		<div class="gallItem">
-			<h4>Flipbook</h4>
-
-			<img class="gallImg" src="img/gallery/sites/flipbook.png">
-			<br />
-			<span>Elementary bases flash application for flipbook like animations</span>
-		</div><!-- gallItem -->
-
-		<br />
-
-		<div class="gallItem">
-			<h4>Happy Little Octopus</h4>
-
-			<img class="gallImg" src="img/gallery/sites/octopus.png">
-			<br />
-			<span>Personal graphic project intergrated into the web for Javascript practice</span>
-		</div><!-- gallItem -->
-
-		<div class="gallItem">
-			<h4>Task Manager</h4>
-
-			<img class="gallImg" src="img/gallery/sites/scheme.png">
-			<br />
-			<span>Steampunk task manager made with jQuery</span>
-		</div><!-- gallItem -->
-
+		<div ng-view></div>
 	</div><!-- sites -->
 
 	<div id="footer">
@@ -101,17 +54,16 @@
 			<li><a href="#">About</a></li>
 		</ul>
 	</div><!-- footer -->
- 
+
  </div><!-- wrap -->
 
-<!-- Angular -->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>	
 <!-- jQuery -->
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> 
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <!-- Unslider -->
 <script type="text/javascript" src="js/unslider.js"></script>
 <!-- Main -->
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/controllers/core.js"></script>
 
 </body>
 
